# src/schemas/user.ts
@@ -90,7 +90,6 @@ export interface IEnableNotificationsInput {
 
 export const MakeTransactionSchema = z.object({
   assetId: z.string().min(1, 'Asset is required'),
-  networkId: z.string().min(1, 'Network is required'),
   address: z.string().min(1, 'Network name is required'),
   quantity: z.number().gte(1, { message: 'Quantity must be at least 1' }),
   proof: z
@@ -101,7 +100,6 @@ export const MakeTransactionSchema = z.object({
 
 export interface IMakeTransactionInput {
   assetId: string;
-  networkId: string;
   address: string;
   quantity: number;
   proof: string;
